# chatter

./: README.md  clear-caches.sh
final/chatter/: .env  App.tsx  app.json  appNav.tsx  package-lock.json  package.json
server/: .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
server-rs/: .gitignore  Cargo.toml  docker-compose.yml
server-rs/migrations/: 00001_core_tables.sql  00001_message_table.sql  0001_core_tables.sql
server-rs/src/: lib.rs  main.rs
server-rs/src/common/: app_state.rs
server-rs/src/common/entities/base/: mod.rs
server-rs/src/common/entities/broadcasts/: mod.rs  model.rs  repo.rs
server-rs/src/common/entities/circle_group/: repo.rs
server-rs/src/common/entities/message/: mod.rs
server-rs/src/common/entities/messages/: model.rs  repo.rs
server-rs/src/common/entities/profile/: mod.rs
server-rs/src/common/entities/profiles/: model.rs  repo.rs
server-rs/src/common/entities/utils/: mod.rs
server-rs/src/common_test/: actix_fixtures.rs  mod.rs
server-rs/src/common_tests/: actix_fixture.rs
server-rs/src/routes/: message_route.rs  profile_route.rs
server-rs/src/routes/messages/: message_route.rs  model.rs
server-rs/src/routes/profiles/: model.rs  profile_route.rs
server-rs/tests/: message_route_test.rs  mod.rs  profile_route_test.rs
server-rs/tests/common/entities/messages/: repo_test.rs
server-rs/tests/routes/: message_route_test.rs  profile_route_test.rs
server-rs/tests/routes/messages/: message_route_test.rs
server-rs/tests/routes/profiles/: profile_route_test.rs
(+228 files in other folders)
